--- a/employee-directory-app/src/components/Body/Body.css
+++ b/employee-directory-app/src/components/Body/Body.css
@@ -8,5 +8,24 @@
   height: 80vh;
   border: solid 1px black;
   order: 5;
-  overflow: hidden;
+  overflow: scroll;
+  display: flex;
+  flex-direction: column;
+  margin: 45px;
+  background-color: rgba(255, 0, 0, 0.719);
+}
+
+.left {
+  border: cornflowerblue solid 5px;
+  margin: 10px;
+  width: 300px;
+  height: 200px;
+  background-color: rgb(228, 101, 101);
+}
+
+.right {
+  border: cornflowerblue solid 5px;
+  background-color: rgb(228, 101, 101);
+  margin-right: 45px;
+  margin: 10px;
 }
